--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -56,13 +56,18 @@ Morphism is a kind of relation between 2 \mynameref{def:object}s.
   \[
   f_{ab}: a \rightarrow b
   \]
-  is called
-  \textit{morphism}. Morphism assumes a direction i.e. one \mynameref{def:object}
+  is called \textit{morphism}. Morphism assumes a direction i.e. one
+  \mynameref{def:object} 
   ($a$) is called \textit{source} and another one ($b$)
   \textit{target}.
 
   The \mynameref{def:set} of all morphisms between objects $a$ and $b$
   is denoted as $\catmset{a}{b}$.
+\end{definition}
+
+\begin{definition}[Arrow]
+  \label{def:arrow}
+  \mynameref{def:morphism}s are also called as \textit{Arrows}.
 \end{definition}
 
 The important remark about morphisms is below
