--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -160,7 +160,8 @@ Let $\cat{C}$ is a category and $t, t' \in \catob{C}$ two
 \mynameref{def:isomorphism} $v: t' \to t$ (see
 \mynameref{def:object_equality}) 
 \begin{proof}
-Just got to the \mynameref{def:op_category} and revert arrows in
+Just got to the \mynameref{def:op_category} and revert 
+\mynameref{def:arrow}s in
 \cref{fig:initial_object_unique}. The result shown on
 \cref{fig:terminal_object_unique} and it proofs the theorem statement.
 \begin{figure}
@@ -251,7 +252,8 @@ The \mynameref{def:product} of two sets $A$ and $B$ in
 as a \mynameref{def:cartesian_product}: $A \times B = \{(a,b)| a \in A, b \in B\}$. 
 \end{example}
 
-If we invert arrows in \mynameref{def:product} we will got another
+If we invert \mynameref{def:arrow}s in \mynameref{def:product} we will
+got another 
 object definition that is called sum
 
 \begin{definition}[Sum]
