Topos chapter stub added

--- a/notations.tex
+++ b/notations.tex
@@ -11,7 +11,7 @@
 \nomenclature{$\cat{C++}$}{\mynameref{def:cppcategory}}
 \nomenclature{$\cat{Cat}$}{\mynameref{def:catcategory}}
 \nomenclature{$a, b$}{\mynameref{def:object}s (Latin small letters)}
-\nomenclature{$f, g, h$}{\mynameref{def:morphism} (Latin small
+\nomenclature{$f, g, h$}{\mynameref{def:morphism} (\mynameref{def:arrow}) (Latin small
   letter)}
 \nomenclature{$a \times b$}{\mynameref{def:product}}
 \nomenclature{$a \oplus b$}{\mynameref{def:sum}}
