Introduct has been updated

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,8 +6,8 @@ subject mostly consists of a lot of definitions that are related each
 others and we wrote the book to collect all of them in one
 place to be easy checked and updated in future when we decide to refresh
 our knowledge about the field of math. Therefore the book was written mostly
-for our category theory studying 
-purposes but we will appreciate if somebody else find it useful.
+for our category theory studying purposes but we will appreciate if
+somebody else find it useful. 
 
 The topics(chapters) cover the base definitions
 (\mynameref{def:object}, \mynameref{def:morphism} and
@@ -15,10 +15,11 @@ The topics(chapters) cover the base definitions
 \mynameref{def:nt}, \mynameref{def:monad} and also include important
 results from the category theory such as Yoneda's lemma (see
 \cref{sec:yoneda}) and Curry-Howard-Lambek correspondence (see
-\cref{sec:curry_howard_lambek}).  
+\cref{sec:curry_howard_lambek}). The \cref{sec:topos} gives an
+introduction to the topos theory i.e. just another view of the
+\mynameref{def:set}s.
 
-There are a lot of 
-examples in each chapter. The examples cover different category
+There are a lots of examples in each chapter. The examples cover different category
 theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
 anyone can choose the suitable example(s) for (s)he. 
@@ -27,7 +28,7 @@ The most important examples are related to the set theory. The set
 theory and category theory are very close related. Each one can be
 considered as an alternative view to another one.
 
-There are a lot of examples from programming languages which include
+There are also a lots of examples from programming languages which include
 Haskell, Scala, C++. The source files for programming languages 
 examples (Haskell, C++, Scala) can be found on github repositories:
 \begin{itemize}
