--- a/topos.tex
+++ b/topos.tex
@@ -1,6 +1,6 @@
 %% -*- coding:utf-8 -*-
 \chapter{Topos}
-
+\label{sec:topos}
 Every \mynameref{def:set} can be considered from a categorical point of
 view (see \mynameref{def:categorical_approach}) i.e. every set can be
 considered as a category. From other side not every category can be
