Introduct has been updated

--- a/introduction.tex
+++ b/introduction.tex
@@ -19,7 +19,7 @@ results from the category theory such as Yoneda's lemma (see
 introduction to the topos theory i.e. just another view of the
 \mynameref{def:set}s.
 
-There are a lots of examples in each chapter. The examples cover different category
+There are a lot of examples in each chapter. The examples cover different category
 theory application areas. We assume that the reader is familiar with
 the corresponding area and the example(s) can be passed if not. I.e.
 anyone can choose the suitable example(s) for (s)he. 
@@ -28,7 +28,7 @@ The most important examples are related to the set theory. The set
 theory and category theory are very close related. Each one can be
 considered as an alternative view to another one.
 
-There are also a lots of examples from programming languages which include
+There are also a lot of examples from programming languages which include
 Haskell, Scala, C++. The source files for programming languages 
 examples (Haskell, C++, Scala) can be found on github repositories:
 \begin{itemize}
