Base definitions: refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -56,7 +56,7 @@ Morphism is a kind of relation between 2 \mynameref{def:object}s.
   \[
   f_{ab}: a \rightarrow b
   \]
-  is called \textit{morphism}. Morphism assumes a direction i.e. one
+  is called as \textit{morphism}. Morphism assumes a direction i.e. one
   \mynameref{def:object} 
   ($a$) is called \textit{source} and another one ($b$)
   \textit{target}.
@@ -76,11 +76,11 @@ The important remark about morphisms is below
 The morphism has to be considered as a relation between objects. We
 will avoid standard (from set theory) notation for morphisms: $f(a) =
 b$. The reason for this is the following. Let $f_1: a \to b$ and $f_2:
-a \to b$ are 2 different morphisms. The notation $f_1(a) = b, f_2(a) =
+a \to b$ are two different morphisms. The notation $f_1(a) = b, f_2(a) =
 b$ leads to incorrect conclusion that $f_1 = f_2$. 
 
 For instance if $a
-= b = \mathbb{R}$ then 2 functions $f_1(x) = x, f_2(x) = -x$ set 2
+= b = \mathbb{R}$ then two functions $f_1(x) = x, f_2(x) = -x$ define two
 different ordering on $\mathbb{R}$ and as result have not to be
 considered as the same functions.
 \end{remark}
