Base definitions: refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -68,7 +68,7 @@
     node[pos=0.5,above]{$f$} (b);
 
   \end{tikzpicture}
-  \caption{\mynameref{def:morphism} (\mynameref{def:arrow}) $f: a \to b $}
+  \caption{Morphism (arrow) $f: a \to b $}
   \label{fig:morphism}
 \end{figure}
 
@@ -113,13 +113,13 @@ considered as the same functions.
 \begin{definition}[Domain]
   \label{def:domain}
   Given a \mynameref{def:morphism} $f: a \to b$, the
-  \mynameref{def:object} $a$ is called domain and denoted as $\dom f$.
+  \mynameref{def:object} $a$ is called \textit{domain} and denoted as $\dom f$.
 \end{definition}
 
 \begin{definition}[Codomain]
   \label{def:codomain}
   Given a \mynameref{def:morphism} $f: a \to b$, the
-  \mynameref{def:object} $b$ is called codomain and denoted as $\cod f$.
+  \mynameref{def:object} $b$ is called \textit{codomain} and denoted as $\cod f$.
 \end{definition}
 
 \mynameref{def:morphism}s have several properties. \footnote{The
@@ -157,7 +157,7 @@ considered as the same functions.
   \[
   f_{ac} ( x ) = f_{bc} ( f_{ab} ( x ) ),
   \]
-  where $f_{ab} ( x ) \in b$.
+  where $f_{ab} ( x ) \in b, f_{ac} ( x ) \in c$.
 \end{remark}
 
 \begin{axiom}[Associativity]
