Base definitions: refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -492,9 +492,15 @@ $\cathom{C}$ are \nameref{def:set}s
 \begin{definition}[Locally small category]
 \label{def:localy_small_category}
 \index{Category!locally small}
-\index{homset}
+
 A category $\cat{C}$ is called \textit{locally small} if 
-$\cathom{C}$ is a \nameref{def:set}. The set is called \textit{homset}.
+$\cathom{C}$ is a \nameref{def:set}. The set is called \mynameref{def:homset}.
+\end{definition}
+
+\begin{definition}[Homset]
+\label{def:homset}
+The \textit{homset} is the \mynameref{def:set} of morphisms in a
+\mynameref{def:localy_small_category}. 
 \end{definition}
 
 
