--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -444,7 +444,7 @@ form a new set that is called as \mynameref{def:homset} and denoted as $A
 \end{example}
 
 The construction of \mynameref{def:homset} is applied to
-\mynameref{def:setcategory} but not to an arbitrary category because
+the \mynameref{def:setcategory} but not to an arbitrary category because
 the \mynameref{def:homset} is a \mynameref{def:set} and therefore the
 object in the \mynameref{def:setcategory}. I.e. if $\cat{C}$ is a
 category and $a, b \in \catob{C}$ 
