Base definitions: examples refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -542,19 +542,20 @@ allow connect our usual knowledge about sets with the category theory.
 
 \begin{definition}[Set]
   \label{def:set}
-  Set is a collection of distinct object. The objects are called the
-  elements of the set.
+  \textit{Set} is a collection of distinct objects. The objects are called as
+  the elements of the set.
 \end{definition}
 
 \begin{definition}[Binary relation]
   \label{def:binary_relation}
   If $A$ and $B$ are 2 \mynameref{def:set}s then a subset of $A \times B$ is
-  called binary relation $R$ between the 2 sets, i.e. $R \subset A \times B$.
+  called as \textit{binary relation} $R$ between the 2 sets, i.e. $R
+  \subset A \times B$. 
 \end{definition}
 
 \begin{definition}[Function]
   \label{def:function}
-  Function $f$ is a special type of \mynameref{def:binary_relation}. I.e.
+  \textit{Function} $f$ is a special type of \mynameref{def:binary_relation}. I.e.
   if $A$ and $B$ are 2 \mynameref{def:set}s then a subset of $A \times B$ is
   called function $f$ between the 2 sets if $\forall a \in A \, \exists!
   b \in B$ such that $(a,b) \in f$. In other words function definition
