Base definitions: sets example refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -617,9 +617,9 @@ allow connect our usual knowledge about sets with the category theory.
 \begin{definition}[Categorical approach]
 \label{def:categorical_approach}
 The description of a system (object) via its relations with other
-systems (objects) we will call as  \textit{categorical approach}.
-This description is contrary to an ordinary system description via its
-internal structure.
+systems (objects) will be called as  \textit{categorical approach} in
+the book. This description is an alternative one to an ordinary system
+description via its internal structure.
 \end{definition}
 
 \begin{definition}[Singleton]
