base definitions: set examples refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -704,7 +704,11 @@ subset:
   \mynameref{def:domain}s but from other hand $g_1(Y') = g_2(Y')$. For
   instance we can choose $g_1 = \idm{Y'}, g_2=\idm{Y}$. As
   soon as $Y'$ is \mynameref{def:codomain} of $f$ we always have
-  $g_1(f(X)) = g_2(F(X))$.
+  $g_1(f(x)) = g_2(f(x))$, $\forall x \in X$. I.e. 
+  \[
+  g_1 \circ f = g_2 \circ f,
+  \]
+  but $g_1 \ne g_2$.
   
   As result we can say that an \mynameref{def:surjection} is a
   \mynameref{def:epimorphism} in the $\cat{Set}$ category. Moreover
