--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -701,16 +701,16 @@ subset:
   conclude that there is not an \mynameref{def:epimorphism} because  
   $\exists g_1: Y' \to Y'$ and  $g_2 : Y \to Y$ such
   that $g_1 \ne g_2$ because they operates on different
-  \mynameref{def:domain}s but from other hand $g_1(Y') = g_2(Y')$. For
+  \mynameref{def:domain}s but from other hand $g_1(y) = g_2(y),
+  \forall y \in Y'$. For
   instance we can choose $g_1 = \idm{Y'}, g_2=\idm{Y}$. As
   soon as $Y'$ is \mynameref{def:codomain} of $f$ we always have
   $g_1(f(x)) = g_2(f(x))$, $\forall x \in X$. I.e. 
   \[
   g_1 \circ f = g_2 \circ f,
   \]
-  but $g_1 \ne g_2$.
-  
-  As result we can say that an \mynameref{def:surjection} is a
+  but $g_1 \ne g_2$. As result one can say that a
+  \mynameref{def:surjection} is an 
   \mynameref{def:epimorphism} in the $\cat{Set}$ category. Moreover
   there is a proof 
   \cite{bib:proofwiki:Surjection_iff_Epimorphism_in_Category_of_Sets}
@@ -753,7 +753,7 @@ subset:
   \caption{A non-surjective function $f$ from domain $X$ to
     codomain $Y' \subset Y$.
     $\exists g_1: Y' \rightarrow Y', g_2: Y \rightarrow Y$ such that
-    $g_1(Y') = g_2(Y')$, but as soon as $Y' 
+    $g_1(y) = g_2(y), \forall y \in Y'$, but as soon as $Y' 
     \ne Y$ we have $g_1 \ne g_2$. Using the fact that $Y'$ is codomain
     of $f$ we got $g_1 \circ f = g_2 \circ f$.
     I.e. the function $f$ is not epimorphism. }
