base definitions: set examples refactoring

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -581,7 +581,8 @@ allow connect our usual knowledge about sets with the category theory.
   \index{Object!$\cat{Set}$ category}
   \index{Morphism!$\cat{Set}$ category}
   \index{Category!$\cat{Set}$}
-  In the set category we consider a \mynameref{def:set} of
+  In the \textit{Set category} we consider a
+  \mynameref{def:set} of 
   \mynameref{def:set}s where 
   \mynameref{def:object}s are the \mynameref{def:set}s and
   \mynameref{def:morphism}s are \mynameref{def:function}s between the
